--- a/smartdns.conf
+++ b/smartdns.conf
@@ -1,8 +1,5 @@
 # dns server name, defaut is host name
-# server-name, 
-# example:
-#   server-name smartdns
-#
+server-name smartdns
 
 # Include another configuration options
 # conf-file [file]
